# OllaForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md  README.md  README_zh-TW.md  REQUIREMENTS_VERIFICATION.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  eng_demodataset.jsonl  main.py  pyproject.toml  requirements.txt  setup.py  test_speed.jsonl  zhtw_demodatase.jsonl  zhtw_demodataset.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 66a6494b4d14db07  ce849f73d7788f61  e8b33e3a5f03f3bd
.hypothesis/examples/001ac59cc0683a31/: 20464e1eef078701
.hypothesis/examples/01c6275b84aad9c7/: 5990e332c378dfde  f165953440493e3f
.hypothesis/examples/04e6b3400353b141/: 8d5cfc67594cb886
.hypothesis/examples/2a1cf1606a6d3dcd/: 12ae91a964bbd4bf
.hypothesis/examples/3c9b0dc4f61349ea/: e87a158edfabbc53
.hypothesis/examples/54f3e48ce9efca6c/: 5777b64f80f08052  8cf100930b932055
.hypothesis/examples/5c637a31d71ed2f6/: 014568e95cfa9a90  04df1f0917bb4ec5  0a59f6ce774413a8  109ceb9ec5f47b32  13a8e370202201d7  13c2a419a918f840  281b57a609aa8d03  2b34254519dacd39  31bead91e0f43ba6  32a173e1b476fbcd  33454aaa8a574062  36f770253f14eeeb  3928e2107242da35  3a607ae0be34f805  3d558669458f8c63  429215f858b98b7c  473a2d4142299f57  4b243f49eb9e55c7  4e60916342783b97  4edb0f78a3cc02b4  4ffe28099ed26623  5483b1849690848c  5832cea1ed1341d5  596a4817f9df12e9  5a498720f0b117ed  5ccff919b92f4c3e  66556094e30248dd  6c91871396d549c7  6e9668b3b5b1003d  6eeca80295b9d0e3  78a883b0f1cbdb19  7ba408a8a2abbd09  7d19dcf99ebaba4d  7ed2292d6f9950f1  849f9ffc8c9edb9e  8875621ad2efd361  887dcf81101c1723  8fcdb9340ef5c16f  908a8a74add8dca7  94f4e0b95d8ae698  (+28 more)
.hypothesis/examples/649cc371374e42db/: 1b821a349de1a08b  35cd04326a798110  f1f36775a905bc3f
.hypothesis/examples/6dea6e0b3426f6fe/: 1d4d94d1d572050a
.hypothesis/examples/a4a13071550ae2c1/: 0e4ac2fb9c4cc54c
.hypothesis/examples/ce208b773b9a849b/: 3abbe8b473281b28  53651d462055c71a  dff1415ff0eb32bd
.hypothesis/examples/db394d1e33ce544b/: 072b515a4e4a8927  428a515f9c57b8cd
.hypothesis/examples/de9914c0cd451bf2/: a1d8e21d85ed6cec
.hypothesis/examples/e6aa66265f368a0d/: 20589ee804b35ecf  21b1bb0df85b2410  22b2da181e4f4119  25b18b234f521729  34bb891e51c69ca8  3d5c22a76a781567  40a61372c494415c  4566839da29d1e75  45dc65d3a3390918  4b9284d84d7d92f5  70bf1fbc3157d615  72a6e5ed355325ae  8bc4170cefd50e73  b45a88d6f81b8c65  c1ec5c4980e87f7c  d535d8f084820947  da812e5712cb9dc3  e6f7c10918ab5eee  fb1ebeb15f165cf9  fb3cf48387673c38
.kiro/specs/dataset-augmentation/: design.md  requirements.md  tasks.md
.kiro/specs/document-to-dataset/: design.md  requirements.md  tasks.md
.kiro/specs/ollama-cli-generator/: design.md  requirements.md  tasks.md
.kiro/specs/web-interface/: design.md  requirements.md  tasks.md
.vscode.example/: README.md  extensions.json  settings.json
docs/: README.md  getting-started.md  web-interface.md
examples/: README.md  sample_data.csv  sample_data.json  sample_data.jsonl  zhtw_demodataset.jsonl
ollaforge/: __init__.py  __main__.py  augmentor.py  batch_processor.py  chunk_splitter.py  cli.py  client.py  doc_generator.py  doc_parser.py  file_manager.py  formats.py  hf_loader.py  interactive.py  models.py  processor.py  progress.py  qc.py
ollaforge-web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
ollaforge-web/e2e/: augmentation.spec.ts  configuration.spec.ts  error-scenarios.spec.ts  fixtures.ts  generation.spec.ts  smoke.spec.ts  tsconfig.json
ollaforge-web/src/: App.css  App.tsx  index.css  setupTests.ts
ollaforge-web/src/__tests__/: setup.test.ts
ollaforge-web/src/components/: AugmentationForm.tsx  DatasetPreview.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  FileUpload.tsx  GenerationForm.tsx  LanguageSelector.tsx  LoadingOverlay.tsx  OfflineIndicator.tsx  ProgressDisplay.tsx  index.ts
ollaforge-web/src/hooks/: index.ts  useNetworkStatus.ts
ollaforge-web/src/i18n/: index.ts
ollaforge-web/src/i18n/locales/: en.json  zh-CN.json  zh-TW.json
ollaforge-web/src/layouts/: MainLayout.tsx
ollaforge-web/src/pages/: AugmentPage.tsx  ConfigPage.tsx  GeneratePage.tsx  index.ts
ollaforge-web/src/router/: index.tsx
ollaforge-web/src/services/: api.ts  index.ts  operationQueue.ts  websocket.ts
ollaforge-web/src/theme/: index.ts
ollaforge/web/: .env.example  README.md  SETUP.md  __init__.py  models.py  server.py
ollaforge/web/routes/: __init__.py  augmentation.py  generation.py  models.py  tasks.py  websocket.py
ollaforge/web/services/: __init__.py  augmentation.py  generation.py  task_manager.py
ollaforge_env/: pyvenv.cfg
scripts/: build.sh  release.sh
tests/: __init__.py  test_augmentor.py  test_batch_processor_props.py  test_chunk_splitter_props.py  test_cli.py  test_client.py  test_doc_generator_props.py  test_doc_generator_qc.py  test_doc_parser_pdf.py  test_doc_parser_props.py  test_file_manager.py  test_formats.py  test_models.py  test_processor.py  test_progress.py  test_web_augmentation.py  test_web_formats.py  test_web_generation.py  test_web_models.py  test_web_server.py  test_web_setup.py  test_web_task_manager.py  test_web_websocket.py
tests/fixtures/: sample.html  sample.json  sample.md  sample.py  sample.txt
