[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollaforge"
version = "1.2.0"
description = "CLI tool for generating datasets using local Ollama models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OllaForge Team"}
]
keywords = [
    "ollama",
    "llm",
    "dataset",
    "fine-tuning",
    "sft",
    "dpo",
    "machine-learning",
    "nlp",
    "traditional-chinese",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "ollama>=0.1.7",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
qc = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
]
formats = [
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
]
docs = [
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
]
web = [
    "fastapi>=0.104.0",
    "python-socketio>=5.10.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.90.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
    # Include formats dependencies for testing
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    # Include web dependencies for testing
    "fastapi>=0.104.0",
    "python-socketio>=5.10.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Include docs dependencies for testing
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
]
all = [
    "ollaforge[qc,dev,formats,docs,web]",
]

[project.scripts]
ollaforge = "ollaforge.cli:app"

[project.urls]
Homepage = "https://github.com/ollaforge/ollaforge"
Documentation = "https://github.com/ollaforge/ollaforge#readme"
Repository = "https://github.com/ollaforge/ollaforge"
Issues = "https://github.com/ollaforge/ollaforge/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hypothesis
    | \.pytest_cache
    | __pycache__
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise exceptions with `raise ... from err` (too many to fix)
]

[tool.ruff.isort]
known-first-party = ["ollaforge"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = false
disable_error_code = ["var-annotated", "assignment", "return-value", "arg-type", "call-overload", "syntax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["ollaforge"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
